--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "mongodb": "^6.18.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -53,6 +58,7 @@
     "prisma": "^6.5.0",
     "tailwindcss": "^4.0.15",
     "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
