--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.542.0",
     "mongodb": "^6.18.0",
     "next": "^15.2.3",
+    "nuqs": "^2.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
